Fix z-index of the loader in the field molecule

--- a/src/molecules/field.scss
+++ b/src/molecules/field.scss
@@ -164,6 +164,7 @@
     position: absolute;
     right: 14px;
     top: 14px;
+    z-index: 1;
 }
 
 @mixin field_tooltip($background-color) {
